Fixed layout, but product cards look quite ugly TO-DO: - Add carousel - Find & add cool animations effects - Merge Duy Thai's branch - Implement MS Word's "Image Word Wrap effect" for the "Buy now" button

--- a/css/nav.css
+++ b/css/nav.css
@@ -120,7 +120,7 @@ nav[data-active="true"] + main {
     /* z-index: 1000; */
     display: block;
     float: left;
-    box-shadow: 0 6px 12px rgba(0,0,0,.175);
+    /* box-shadow: 0 6px 12px rgba(0,0,0,.175); */
     margin: 2px 0 0;
     font-size: 14px;
     text-align: left;
