--- a/css/shop.css
+++ b/css/shop.css
@@ -12,32 +12,34 @@ main {
     margin: 0;
     box-sizing: border-box;
     font-family: 'Raleway', sans-serif;
+    height: fit-content;
 }
 
 body {
-    /* background-color: var(--bodyBack); */
-    min-height: 100vh;
-    display: grid;
+    height: fit-content;
+    /* display: grid;
     place-content: center;
-    position: relative;
-
+    position: relative; */
 }
+
 .products-container {
-    width: 80vw;
-    height:80vh;
+    width: 95%;
+    height: fit-content;
     display: flex;
     flex-direction: column;
+    flex-wrap: wrap;
     justify-content: space-around;
 }
-.header {
+header {
     width: 100%;
     text-align: center;
 }
-.header h1 {
+header h1 {
     font-size: 4em;
     text-transform: uppercase;
-    color: var(--textColor);
+    color: #b68f69;
 }
+
 .products {
     width: 100%;
     align-self: center;
@@ -46,19 +48,25 @@ body {
     justify-content: center;
     flex-wrap: wrap;
     gap: 40px;
+    /* overflow: hidden; */
 }
 
 .product {
-    position: relative;
+    /* position: relative; */
+    /* box-sizing: border-box; */
+    width: clamp(10vw, 250px, 30vw);
+    height: fit-content;
+    min-height: 300px;
+    padding: 20px;
+
+    border-radius: 10px;
     background-color: var(--sectionBack);
-    width: 250px;
-    height: 100%;
     box-shadow: 0 5px 20px rgba(0, 0, 0, .3);
+    
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    padding: 20px 20px 40px;
-    border-radius: 10px;
+    
     transition: .3s;
 }
 
@@ -66,45 +74,38 @@ body {
     transform: translateY(-15px);
     box-shadow: 0 5px 10px rgba(0, 0, 0, .2);
 }
-.product-img {
-    width:100%;
-    height: 60%;
-    display: flex;
-    place-content: center;
 
-}
-.product-img img {
-    height: 150px;
-    border-radius: 5px;
-    position: absolute;
-    align-items: center;
-    width: auto;
-}
-.namePrice {
+.product-img {
+    object-fit: cover;
+    height: 60%;
     width: 100%;
-    display: flex;
-    justify-content: space-between;
+    margin: 0 auto;
+    border-radius: 5px;
 }
-.namePrice h3 {
+
+.product-name {
+    width: 100%;
+    margin: 0 auto;
     font-size: 25px;
     text-transform: capitalize;
     color: var(--textColor);
 }
-.namePrice span {
+
+.product-name span {
     font-size: 1.5em;
     color: var(--starColor);
 }
+
 .product p {
     font-size: 18px;
     line-height: 25px;
 }
 
 .buy {
-    position: absolute;
+    margin: 0px 20px 20px auto;
     bottom: 20px;
     right: 20px;
-}
-.buy button {
+    width: fit-content;
     padding: 10px 20px;
     border-radius: 7px;
     border: none;
@@ -113,12 +114,15 @@ body {
     font-size: 18px;
     text-transform: capitalize;
     cursor: pointer;
-    transition: .5s;
+    transition: all .5s ease;
 }
 
-.buy button:hover {
+.buy:hover {
     transform: scale(1.1);
 }
 
+.buy:active {
+    transform: scale(.9);
+}
 
 
